# COWTRACK-BACKEND

./: README.md  pyproject.toml
core/: models.py  serializers.py
core/migrations/: 0001_initial.py  0002_make_user_email_nullable.py
cowtrack/: settings.py  urls.py
salesmetrics/: apps.py  filters.py  messages.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
salesmetrics/migrations/: 0001_initial.py  0002_remove_supplier_email.py  0003_rename_product_id_cart_product.py  0004_make_serial_number_nullable.py  0005_use_one_to_one_relationship_on_product.py  0006_change_sale_payment_method_relationship_to_one_to_many.py  0007_alter_branch_location_relationship_to_one_to_many.py  0008_create_supervisorbranchhistory_model.py  0009_remove_supervisor_from_branch.py
scripts/: dummy2db.py  experiments.py  hash_passwords.py  helpers.py  mysql_handler.py  save_supervisorbrachhistory.py  serial_number_generator.py
scripts/data/: core_users.json  salesmetrics_branches.json  salesmetrics_cart.json  salesmetrics_customers.json  salesmetrics_locations.json  salesmetrics_managers.json  salesmetrics_paymentmethods.json  salesmetrics_productcategories.json  salesmetrics_products.json  salesmetrics_sale.json  salesmetrics_sales.json  salesmetrics_salespersons.json  salesmetrics_stock.json  salesmetrics_supervisorbranchhistory.json  salesmetrics_supervisors.json  salesmetrics_suppliers.json
